--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.9.13",
-    "nodemon": "^2.0.3"
+    "mongoose": "^5.9.13"
   },
   "devDependencies": {
     "eslint": "^7.0.0",
@@ -25,6 +24,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "^7.19.0",
+    "nodemon": "^2.0.4",
     "prettier": "^2.0.5"
   }
 }
