--- a/package.json
+++ b/package.json
@@ -1,30 +1,24 @@
 {
-  "name": "e-vote-backend",
-  "version": "1.0.0",
-  "description": "Server for my final year project on mobile voting Application",
-  "main": "App.js",
+  
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js",
-    "start:prod": "NODE_ENV=production nodemon server.js"
+    "start": "node server.js",
+    "server": "nodemon server.js"
   },
-  "author": "Amin Ajao",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^8.2.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mongoose": "^5.9.13"
+    "jsonwebtoken": "^8.5.1",
+    "moment": "^2.25.3",
+    "mongoose": "^5.9.14",
+    "concurrently": "^5.2.0",
+    "nodemon": "^2.0.4",
+    "bcrypt":"*"
   },
   "devDependencies": {
-    "eslint": "^7.0.0",
-    "eslint-config-airbnb": "^18.1.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.1.3",
-    "eslint-plugin-react": "^7.19.0",
-    "nodemon": "^2.0.4",
-    "prettier": "^2.0.5"
+    "concurrently": "^5.2.0",
+    "nodemon": "^2.0.4"
   }
 }
