completed d backend code for admin

--- a/package.json
+++ b/package.json
@@ -8,17 +8,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1",
-    "moment": "^2.25.3",
-    "mongoose": "^5.9.14",
-    "concurrently": "^5.2.0",
-    "nodemon": "^2.0.4",
+    "cors": "*",
+    "express": "*",
+    "jsonwebtoken": "*",
+    "moment": "*",
+    "mongoose": "*",
+    "concurrently": "*",
+    "nodemon": "*",
     "bcrypt":"*"
   },
   "devDependencies": {
-    "concurrently": "^5.2.0",
     "nodemon": "^2.0.4"
   }
 }
